--- a/css/styles.css
+++ b/css/styles.css
@@ -116,15 +116,13 @@ h1.name > a {
   padding-top: 2em;
   padding-bottom: 2em;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   border-top: 1px solid #fafafa;
 }
 .name {
   color: #f4645f;
   font-weight: bold;
   align-self: center;
-  margin: 5px 15px;
-  padding: 10px 15px;
 }
 .footer-menu{
   display: none;
@@ -178,6 +176,9 @@ Media Queries
     flex-direction: column;
     align-items: center;
   }
+  .main-footer {
+    justify-content: space-between;
+  }
   .nav a {
     background-color: transparent;
   }
@@ -192,7 +193,7 @@ Media Queries
     flex: 100%;
     margin: 2em;
   }
-  .footer-menu > .flywheel{
+  .flywheel{
     display: none;
   }
   .footer-menu{
